# python

./: .envrc  LICENSE  Pipfile  cookiecutter.json  mypy.ini  pyproject.toml  pytest.ini
docs/source/: conf.py  index.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: helper_functions.py  test_bake_cli.py  test_bake_project.py
{{cookiecutter.project_slug}}/: LICENSE  Pipfile  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: Makefile  mkdocs.yml
{{cookiecutter.project_slug}}/docs/source/: conf.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __main__.py  cli.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
