[tool.poetry]
name = "python-cookiecutter-template"
version = "0.1.0"
description = "This is a basic python template. Hopefully it works out well enough for my use case(s)."
authors = ["PratikBhusal <PratikBhusal@users.noreply.github.com>"]
license = "MIT License"
readme = "README.markdown"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
# recommonmark = "*"
# sphinx-rtd-theme = "*"
hypothesis = "^6.70.2"
mypy = "^1.1.1"
nox = "^2022.11.21"
pytest-cookies = "^0.7.0"
tox = "^4.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
